--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.5.2",
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@next/react-dev-overlay": "^11.1.2",
+    "acorn-jsx": "^5.3.2",
+    "next": "^11.1.2",
     "next-images": "^1.4.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "@types/node": "^14.6.0",
-    "@types/react": "^16.9.46",
+    "@types/node": "^16.7.10",
+    "@types/react": "^17.0.19",
     "@types/styled-components": "^5.1.2",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
-    "babel-plugin-inline-react-svg": "^1.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
